src/test/deca/context/invalid/homemade/tests/test370_appel_non_champ.deca
// test invalide de la règle 3.70


class A{
    int x = 8; 
}

{
    int y = 0;
    A a = new A();
    a.y = 1;
    
}